# basic_python_project

./: CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: actions.yml  develop.yml  main.yml  pull_request.yml  pull_requests.yml
dummy_transformations/: __init__.py  add_offset.py  transformations.py
tests/: test_transformations.py
