[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "dummy_transformations"
author = "Ciencia de Datos • GECI"
author-email = "ciencia.datos@islas.org.mx"
home-page = "http://islas.dev/"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",]
description-file = "README.md"

